--- a/fornitore-dashboard.html
+++ b/fornitore-dashboard.html
@@ -62,7 +62,10 @@
 <script>
   const SUPABASE_URL = "https://qmsgcpkxdkijsxyvhuog.supabase.co";
   const SUPABASE_ANON_KEY = "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6InFtc2djcGt4ZGtpanN4eXZodW9nIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NjMzMjQ1MzcsImV4cCI6MjA3ODkwMDUzN30.husS5qI2XxYqovnx3QX-EPFPca4SPWRQQo9rHM8NLEE";
-  const supabase = window.supabase.createClient(SUPABASE_URL, SUPABASE_ANON_KEY);
+  const supabaseClientFornitoreDashboard = window.supabase.createClient(
+    SUPABASE_URL,
+    SUPABASE_ANON_KEY
+  );
 </script>
 <script>
   let currentUser = null;
@@ -79,13 +82,17 @@
   }
 
   async function fetchProvider(userId) {
-    const { data, error } = await supabase.from("providers").select("*").eq("user_id", userId).single();
+    const { data, error } = await supabaseClientFornitoreDashboard
+      .from("providers")
+      .select("*")
+      .eq("user_id", userId)
+      .single();
     if (error || !data) return null;
     return data;
   }
 
   async function ensureAuth() {
-    const { data, error } = await supabase.auth.getUser();
+    const { data, error } = await supabaseClientFornitoreDashboard.auth.getUser();
     if (error || !data.user) {
       window.location.href = "fornitore-login.html";
       return null;
@@ -93,7 +100,7 @@
     currentUser = data.user;
     provider = await fetchProvider(currentUser.id);
     if (!provider) {
-      await supabase.auth.signOut();
+      await supabaseClientFornitoreDashboard.auth.signOut();
       window.location.href = "fornitore-login.html";
       return null;
     }
@@ -143,7 +150,7 @@
       btn.addEventListener("click", async () => {
         const id = btn.dataset.toggle;
         const current = btn.dataset.active === "true";
-        const { error } = await supabase
+        const { error } = await supabaseClientFornitoreDashboard
           .from("extra_services")
           .update({ is_active: !current })
           .eq("id", id)
@@ -161,7 +168,7 @@
   async function loadServices() {
     if (!provider) return;
     servicesEl.innerHTML = "<p>Caricamento servizi...</p>";
-    const { data, error } = await supabase
+    const { data, error } = await supabaseClientFornitoreDashboard
       .from("extra_services")
       .select("id,title,description,category,is_active, extra_service_options(id,is_active)")
       .eq("provider_id", provider.id)
@@ -184,7 +191,7 @@
   }
 
   document.getElementById("logout-btn")?.addEventListener("click", async () => {
-    await supabase.auth.signOut();
+    await supabaseClientFornitoreDashboard.auth.signOut();
     window.location.href = "fornitore-login.html";
   });
 
