--- a/area-proprietari.html
+++ b/area-proprietari.html
@@ -90,19 +90,19 @@
   const SUPABASE_URL = "https://qmsgcpkxdkijsxyvhuog.supabase.co";
   const SUPABASE_ANON_KEY = "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6InFtc2djcGt4ZGtpanN4eXZodW9nIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NjMzMjQ1MzcsImV4cCI6MjA3ODkwMDUzN30.husS5qI2XxYqovnx3QX-EPFPca4SPWRQQo9rHM8NLEE";
   const PHOTO_BUCKET = "property-photos";
-  const supabase = window.supabase.createClient(SUPABASE_URL, SUPABASE_ANON_KEY);
+  const supabaseClient = window.supabase.createClient(SUPABASE_URL, SUPABASE_ANON_KEY);
 </script>
 
 <script>
   function publicUrlFromPath(path) {
     if (!path) return null;
     if (path.startsWith("http")) return path;
-    const { data } = supabase.storage.from(PHOTO_BUCKET).getPublicUrl(path);
+    const { data } = supabaseClient.storage.from(PHOTO_BUCKET).getPublicUrl(path);
     return data?.publicUrl || null;
   }
 
   async function getCurrentUser() {
-    const { data, error } = await supabase.auth.getUser();
+    const { data, error } = await supabaseClient.auth.getUser();
     if (error || !data.user) {
       window.location.href = "login.html";
       return null;
@@ -115,13 +115,13 @@
   let selectedPropertyId = null;
 
   document.getElementById("btn-logout").addEventListener("click", async () => {
-    await supabase.auth.signOut();
+    await supabaseClient.auth.signOut();
     window.location.href = "login.html";
   });
 
   async function fetchCoverMap(ids) {
     if (!ids || ids.length === 0) return {};
-    const { data, error } = await supabase
+    const { data, error } = await supabaseClient
       .from("property_photos")
       .select("*")
       .in("property_id", ids)
@@ -147,7 +147,7 @@
     const listEl = document.getElementById("my-properties");
     listEl.innerHTML = "Caricamento...";
 
-    const { data, error } = await supabase
+    const { data, error } = await supabaseClient
       .from("properties")
       .select("*")
       .eq("owner_id", currentUser.id)
